# projeto-medico

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
backend-gateway/: .dockerignore  .gitignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.e2e.ts  vitest.config.integration.ts  vitest.config.ts
brain/: 00-Index.md
diagnostic-engine/: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
diagnostic-engine/data/: disease_symptom_links.json  diseases.json  symptoms.json
diagnostic-engine/proto/: diagnostic.proto
diagnostic-engine/scripts/: compile_proto.py  create_dummy_exam.py  enrich_knowledge_base.py  ingest_to_neo4j.py  seed_neo4j_kafka.py  simulate_case.py  test_brain.py
diagnostic-engine/src/: __init__.py  main.py
diagnostic-engine/src/api_grpc/: diagnostic_service.py
diagnostic-engine/src/data/: __init__.py  knowledge_base.py  neo4j_knowledge_base.py
diagnostic-engine/src/diagnostic_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diagnostic-engine/src/grpc/: __init__.py  diagnostic_service.py
diagnostic-engine/src/math/: bayesian_network.py  vector_space.py
diagnostic-engine/src/models/: __init__.py  disease.py  disease_symptom_link.py  symptom.py
diagnostic-engine/src/nlp/: exam_extractor.py  extractor.py  llm_extractor.py
diagnostic-engine/tests/: conftest.py  test_clinical_math.py  test_grpc_service.py  test_knowledge_base.py  test_models.py  test_nlp_pipeline.py  test_ranking_integration.py
pesquisas-gemini/: pesquisa-arquitetura-de-sistema.md  pesquisa-geral.md  (+1 more)
(+59 files in other folders)
